--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.15.10",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
