--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "motion": "^12.0.5",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
